# job-system

./: .gitignore  README.md  pyproject.toml
data/top10_jobs/: C_C++.txt  Java.txt  前端开发.txt  售后客服.txt  实施工程师.txt  技术支持工程师.txt  测试工程师.txt  硬件测试.txt  科研人员.txt  软件测试.txt
data/top10_jobs/岗位画像总结/: C_C++.txt  Java.txt  前端开发.txt  售后服务.txt  实施工程师.txt  技术支持工程师.txt  测试工程师.txt  硬件测试.txt  科研人员.txt  软件测试.txt
data_processor/: batch_request_generator.py  feature_store.py  job_aggregator.py  job_loader.py  preprocessor.py
docs/: database-design.md  job.md  job_implement.md  批量调用指南.md  标准岗位画像构建.md
llm_service/: __init__.py  batch_service.py  extractor.py  prompts.py  schemas.py
mysql/: database.py  init_db.sql
orchestrator/: batch_ingestor.py  batch_orchestrator.py  pipeline.py
tests/: test_extractor.py
