[project]
name = "job-system"
version = "0.1.0"
description = "基于 LLM 的岗位画像结构化抽取系统"
authors = [
    {name = "Developer", email = "dev@example.com"}
]
dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.8",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "pandas>=2.0.0",
    "xlrd>=2.0.1",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
]
requires-python = ">=3.9"

[tool.setuptools]
packages = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
